// Copyright 2025 Synnax Labs, Inc.
//
// Use of this software is governed by the Business Source License included in the file
// licenses/BSL.txt.
//
// As of the Change Date specified in that file, in accordance with the Business Source
// License, use of this software will be governed by the Apache License, Version 2.0,
// included in the file licenses/APL.txt.

syntax = "proto3";

package grpc.connectivity;

import "google/protobuf/empty.proto";

option go_package = "github.com/synnaxlabs/synnax/pkg/api/grpc/connectivity";

service ConnectivityService {
  rpc Exec(google.protobuf.Empty) returns (CheckResponse) {}
}

message CheckResponse {
  string cluster_key = 1;
  string node_version = 2;
}
