syntax = "proto3";

package api.v1;

import "google/protobuf/empty.proto";

option go_package = "github.com/synnaxlabs/synnax/pkg/api/grpc/v1";

service ConnectivityService {
  rpc Exec(google.protobuf.Empty) returns (ConnectivityCheckResponse) {}
}

message ConnectivityCheckResponse {
  string cluster_key = 1;
  string node_version = 2;
}
